# BillingTest

./: .cfignore  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-parallel.yaml  .pytest-xdist.ini  .ruff.toml  .secrets.baseline  .vulture_whitelist.py  .yamllint.yaml  Dockerfile  Dockerfile.mock  Dockerfile.test  FINAL_SUMMARY.md  LICENSE.md  Makefile  PORTFOLIO.md  Procfile  QUICK_START.md  README.md  SECURITY.md  SUMMARY_1PAGER.md  TECHNICAL_ARCHITECTURE.md  TESTING_GUIDE.md  WORKERS_DEPLOY_GUIDE.md  ci_billing_test  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  mcp-config.example.json  mock_routes.json  mypy.ini  prometheus.yml  pyproject.toml  pyproject_fast.toml  pytest_parallel.ini  railway.json  (+20 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/cleanup-backend/: action.yml
.github/actions/start-backend/: action.yml
.github/workflows/: billing-test.yml  can-i-deploy.yml  ci-enhanced.yml  ci-improved.yml  ci-optimized.yml  ci.yml  deploy.yml  docker-compose-test.yml  frontend-ci.yml  integration-tests-service.yml  nightly-e2e.yml  pact-provider-verification.yml  performance-test.yml  pr-e2e-auto.yml  production-smoke-tests.yml  scheduled-tests.yml  security.yml  simple-ci.yml  simple-test.yml  test-optimized.yml  test-report.yml
config/: __init__.py  alpha_etc.py  alpha_kr.py  mock_config.py  url.py
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  CI_ARCHITECTURE.md  GITHUB_SETUP_GUIDE.md  MIGRATION_TO_GITHUB_ACTIONS.md  RENOVATE_DEPENDENCY_DASHBOARD.md  SHIELDS_OPTIONS.md  TECHNICAL_DIAGRAMS.md  TESTING.md  TEST_EXECUTION_GUIDE.md  helper_classes_guide.md  helper_classes_quick_reference.md
docs/openapi/: billing-api.yaml
examples/: deprecation_demo.py
libs/: Adjustment.py  Batch.py  Calculation.py  Contract.py  Credit.py  InitializeConfig.py  Metering.py  Payments.py  SessionHandler.py  __init__.py  adjustment_calculator.py  batch_validator.py  billing_calculator.py  billing_types.py  constants.py  contract_validator.py  dependency_injection.py  exceptions.py  http_client.py  metering_aggregator.py  metering_calculator.py  payment_api_client.py  payment_processor.py  payment_state_machine.py
libs/observability/: __init__.py  telemetry.py
mock_server/: __init__.py  app.py  mock_data.py  openapi_handler.py  pricing.py  run_server.py  security.py  swagger_ui.py  test_data_manager.py  types.py
scripts/: run_tests.py  setup-dev.bat  setup-dev.sh  test_performance_monitor.py
scripts/test/: __init__.py  mock_server.py  run_all.py  run_category.py  test_runner.py
src/domain/models/: __init__.py  adjustment.py  billing.py  contract.py  credit.py  metering.py  payment.py
tests/: .coveragerc  analyze_flaky_tests.py  base.py  base_enhanced.py  cli.py  conftest.py  pytest.ini  pytest_telemetry.py  run_all_tests.py  test_billing_group_adjustment.py  test_contracts_and_adjustments.py  test_contracts_only.py  test_credit_all.py  test_credit_all_refactored.py  test_mock_server.py  test_monitor.py  test_observability_demo.py  test_openapi_integration.py  test_project_adjustment.py  test_unpaid_and_credit.py  test_unpaid_only.py  test_with_mock.py
tests/contracts/: __init__.py  can_i_deploy.py  conftest.py  pact_broker_config.py  pact_compat.py  publish_pacts.py  run.py  test_advanced_contracts.py  test_api_spec_contracts.py  test_billing_consumer.py  test_billing_consumer_v3.py  test_billing_crud_contracts.py  test_billing_provider.py  test_billing_provider_v3.py  test_comprehensive_contracts.py
tests/fixtures/: flaky_test_helpers.py  mock_server.py  optimized_mock_server.py  test_data.py  test_server_fixture.py
tests/integration/: CI_TEST_IMPROVEMENTS.md  README.md  base_integration.py  conftest.py  run.py  run_integration_tests.py  test_adjustment_integration.py  test_all_business_combinations.py  test_billing_workflows.py  test_business_scenarios.py  test_complete_450_combinations.py  test_comprehensive_business_logic.py  test_core_business_scenarios.py  test_credit_workflows.py  test_high_coverage.py  test_managers_with_openapi.py  test_payment_workflows.py  test_with_openapi_mock.py
tests/performance/: benchmark_tracking.py  conftest.py  load-test.js  run.py  smoke-test.js  stress-test.js  test_api_response_times.py  test_payment_performance.py  test_performance_benchmarks.py
tests/security/: __init__.py  conftest.py  run.py  test_security_vulnerabilities.py
tests/unit/: run.py  test_adjustment.py  test_adjustment_calculator.py  test_adjustment_extended.py  test_adjustment_unit.py  test_adjustment_validation.py  test_batch.py  test_batch_unit.py  test_batch_validation.py  test_batch_validator.py  test_billing_calculator.py  test_billing_properties.py  test_billing_properties_parametrize.py  test_calculation.py  test_calculation_logic.py  test_calculation_unit.py  test_contract.py  test_contract_coverage.py  test_contract_extended.py  test_contract_unit.py  test_contract_validator.py  test_credit.py  test_credit_calculator.py  test_credit_unit.py  test_exceptions_simple.py  test_http_client.py  test_http_client_comprehensive_unit.py  test_http_client_unit.py  test_initialize_config.py  test_initialize_config_unit.py  test_manager_error_handling.py  test_metering.py  test_metering_aggregator.py  test_metering_calculator.py  test_metering_edge_cases.py  test_metering_unit.py  test_metering_validation.py  test_payment_api_client.py  test_payment_processor.py  test_payment_state_machine.py  (+10 more)
web/: .cfignore  .eslintrc.json  .gitignore  .npmrc  .pages.toml  .vercelignore  API_SPEC.md  README.md  check-fix.bat  check.bat  check.sh  cypress.config.ts  env.example.txt  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  wrangler.toml
web/public/: openapi.yaml
web/scripts/: ai-test-generator.ts  generate-e2e-tests.ts  tsconfig.json
web/src/app/: layout.tsx  (+3 more)
workers/billing-api/: README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
(+61 files in other folders)
