[tool.poetry]
name = "creditbililngtest"
version = "0.1.0"
description = ""
authors = ["062042@naver.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pytest = "^6.2.2"
pytest-html = "^3.1.1"
bs4 = "^0.0.1"
python-dateutil = "*"

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"